# sofar_assignment

./: README.md  run.sh
install/: local_setup.sh  setup.sh
install/my_package/share/my_package/: package.sh
install/my_package/share/my_package/worlds/: .my_world.wbproj
log/: latest_build
src/customs/: CMakeLists.txt  package.xml
src/customs/action/: Action.action
src/my_package/: package.xml  setup.py
src/my_package/launch/: robot_launch.py
src/my_package/my_package/: my_robot_driver.py
src/my_package/resource/: my_robot.urdf
src/webot_tiagomulti/: package.xml  setup.cfg  setup.py
src/webot_tiagomulti/launch/: multirobot_launch.py  script_launch.py
src/webot_tiagomulti/params/: param.yaml
src/webot_tiagomulti/resource/: tiago_webots.urdf
src/webot_tiagomulti/webot_tiagomulti/: robot_navigator.py  tiago_iron.py  tiago_iron1.py
src/webot_tiagomulti/worlds/: default.wbt
src/webots_ros2_tiago/: setup.py
src/webots_ros2_tiago/launch/: multirobot_launch.py  robot_launch.py
src/webots_ros2_tiago/webots_ros2_tiago/: tiago_iron.py  tiago_iron1.py
src/webots_ros2_tiago/worlds/: .default.wbproj  default.wbt
